--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,14 @@ dependencies:
   pip_services3_components: ^1.0.6
   pip_services3_container: ">=1.0.3 <2.0.0"
   pip_services3_rpc: ^1.0.3
+  pip_services3_grpc: ^1.0.0
   pip_services3_data: ^1.0.5
   pip_services3_mongodb: ^1.0.4
+  pip_clients_emailsettings: ^1.0.0
+  #pip_clients_smssettings: ^1.0.0
+  pip_clients_email: ^1.0.0
+  #pip_clients_sms: ^1.0.0
+  pip_clients_msgtemplates: ^1.0.0
   http: "^0.12.0"
 
 dev_dependencies:
