--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,15 @@ dependencies:
   pip_services3_data: ^1.0.5
   pip_services3_mongodb: ^1.0.4
   pip_clients_emailsettings: ^1.0.0
+  pip_services_emailsettings: ^1.0.0
   #pip_clients_smssettings: ^1.0.0
+  pip_services_smssettings: ^1.0.0
   pip_clients_email: ^1.0.0
+  pip_services_email: ^1.0.0
   #pip_clients_sms: ^1.0.0
+  #pip_services_sms: ^1.0.0
   pip_clients_msgtemplates: ^1.0.0
+  pip_services_msgtemplates: ^1.0.0
   http: "^0.12.0"
 
 dev_dependencies:
